# ft_printf

./: #ft_printf.c#  ._decimal_test_main.c  ._printf_main.c  CMakeLists.txt  Makefile  a.out  check_specifiers.c  data_record.c  decimal_test_main.c  ft_check_sp.c  ft_for_lib.c  ft_itoa_base.c  ft_mod_d_i.c  ft_printf.c  ft_printf.h  ft_printf.h.gch  important_functions.c  main.c  precision.c  print_c_big.c  print_wchar.c  support_ft.c  width.c
libft/: Makefile  libft.h
libft/get_next_line/: get_next_line.c  get_next_line.h
